:lipstick: N°3913 Setup : fix license content overflow in "license agreement" step Added `white-space: pre-wrap;` in setup.scss as all pre tags inside the setup container are subject to this problem because this container has a specific width set.

--- a/css/setup.scss
+++ b/css/setup.scss
@@ -341,6 +341,10 @@ body {
   margin-left: auto;
   margin-right: auto;
 
+  pre {
+    white-space: pre-wrap;
+  }
+
   .ibo-title {
     @extend %ibo-vertically-centered-content;
 
